# mcp-data-detective

./: .gitignore  LICENSE  README.md  charts.py  pyproject.toml
src/data_detective/: __init__.py  server.py  validation.py
src/data_detective/seed/: __init__.py  generator.py
src/data_detective/sources/: registry.py
src/data_detective/tools/: chart.py  connect.py  export.py  profile.py  quality.py  query.py
src/mcp_data_server/: server.py
src/mcp_data_server/tools/: connect.py  export.py  profile.py  quality.py  query.py
tests/: __init__.py  test_chart.py  test_generator.py  test_tools.py  test_validation.py
