[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-data-server"
version = "0.1.0"
description = "An MCP server that gives AI assistants the ability to connect to, query, profile, and monitor data sources."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Otis Smith" }]
dependencies = [
    "mcp[cli]>=1.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "faker>=25.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcp-data-server = "mcp_data_server.server:main"
mcp-data-seed = "mcp_data_server.seed.generator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_data_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
